// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resolveSettings > should reject an unknown key, naming it 1`] = `
{
  "code": "unknown_setting",
  "data": {
    "key": "featurs",
    "known": [
      "features",
      "steps",
    ],
  },
  "details": "GherkinSettings carries \`features\` and \`steps\` only. An accepted-but-unimplemented key would be a silent no-op, so an unknown one fails at config time instead. Remove the key, or fix its spelling.",
  "message": "Unknown gherkin setting "featurs"",
  "title": "Unknown Gherkin Setting",
  "type": "urn:lindorm:gherkin:error:unknown_setting",
}
`;

exports[`resolveSettings > should reject tags with the not-yet-shipped message 1`] = `
{
  "code": "unknown_setting",
  "data": {
    "key": "tags",
    "known": [
      "features",
      "steps",
    ],
  },
  "details": "GherkinSettings carries \`features\` and \`steps\` only. An accepted-but-unimplemented key would be a silent no-op, so an unknown one fails at config time instead. Remove the key, or fix its spelling.",
  "message": "Unknown gherkin setting "tags" — tag-based scenario selection is not yet shipped",
  "title": "Unknown Gherkin Setting",
  "type": "urn:lindorm:gherkin:error:unknown_setting",
}
`;
